external-crates/move/crates/move-compiler/tests/move_check/parser/type_mut_space.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03004]: unbound type
  ┌─ tests/move_check/parser/type_mut_space.move:5:26
  │
5 │     public fun foo(_x: & mut S) {
  │                          ^^^ Unbound type 'mut' in current scope

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/type_mut_space.move:5:30
  │
5 │     public fun foo(_x: & mut S) {
  │                              ^
  │                              │
  │                              Unexpected 'S'
  │                              Expected ',' or ')'
